# Assignment_C_CDP

./: CMakeLists.txt  README.md  README.txt  competitionDay.c  competitionDay.h  competitors_linked_list.c  competitors_linked_list.h  data_format.c  data_format.h  file_reader.c  file_reader.h  main.c  trackResults_linked_list.c  trackResults_linked_list.h  tracks_linked_list.c  tracks_linked_list.h
